# automated-checkout

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
conf/data/: checkout.yaml
conf/evaluation/: default.yaml
conf/inference/: botsort.yaml  default.yaml
conf/mlflow/: default.yaml  disabled.yaml
conf/model/: yolo11m.yaml  yolo11m_cls.yaml
conf/trackers/: botsort_reid.yaml  bytetrack_60fps.yaml
conf/training/: classify.yaml  detect.yaml
src/data_prep/: extract_crops.py  parse_labels.py  prepare_classification_data.py  scene_compositor.py  split_dataset.py
src/evaluation/: counting_metrics.py  detection_metrics.py  evaluate.py
src/inference/: counter.py  run_inference.py
src/training/: common.py  mlflow_utils.py  train_classifier.py  train_detector.py
src/utils/: extract_backgrounds.py  visualization.py
tests/data_prep/: test_extract_crops.py  test_parse_labels.py  test_prepare_classification_data.py  test_scene_compositor.py  test_split_dataset.py
tests/evaluation/: test_counting_metrics.py  test_detection_metrics.py  test_evaluate.py
tests/inference/: test_counter.py  test_inference_pipeline.py
tests/training/: test_mlflow_utils.py  test_train.py
tests/utils/: test_extract_backgrounds.py  test_visualization.py
